tests/NormalTests/paczka1/small_fuzzy/73131002.err
Error in line 1: z5lgnC S573 48,7
Error in line 5: jSwl7 S906 96,8
Error in line 8: 4nj S788 4,8
